--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -1,4 +1,4 @@
-FROM imhuwq/ubuntu_base:16.04
+FROM imhuwq/ubuntu
 MAINTAINER imhuwq "imhuwq@gmail.com"
 ENV REFRESHED_AT 2017-06-27
 RUN apt update
