--- a/dev-pack/Dockerfile
+++ b/dev-pack/Dockerfile
@@ -1,5 +1,5 @@
 FROM imhuwq/ubuntu
 MAINTAINER imhuwq "imhuwq@gmail.com"
 
-RUN apt install -y net-tools dnsutils iputils-ping iftop
-RUN apt install -y curl wget git
+RUN apt install -y net-tools dnsutils iputils-ping iftop telnet && \
+    apt install -y curl wget git
