delete(images): delete unuseful images

--- a/ubuntu/Dockerfile
+++ b/ubuntu/Dockerfile
@@ -1,4 +1,40 @@
-# Version: 0.0.1
 FROM ubuntu:16.04
 MAINTAINER imhuwq "imhuwq@gmail.com"
+
 COPY sources.list /etc/apt/sources.list
+ENV LC_ALL C.UTF-8
+
+RUN apt-get update
+
+# 一些常用工具包
+RUN apt-get install -y lsb-core net-tools dnsutils iputils-ping iftop htop telnet sudo openssh-server curl wget git vim locate
+
+# 一些常用基础库
+RUN apt-get install -y libssl-dev
+
+# 一些常用的工具链
+RUN apt-get install -y checkinstall build-essential cmake
+
+# 从源码安装 python 3.5.3
+#_bz2                _curses           _curses_panel
+#_dbm                _gdbm             _lzma
+#_sqlite3            _tkinter          readline
+RUN apt-get install -y libbz2-dev libncursesw5-dev libgdbm-dev liblzma-dev libsqlite3-dev tk-dev libreadline-dev
+RUN cd /tmp && wget http://mirrors.sohu.com/python/3.5.3/Python-3.5.3.tgz && \
+    tar -xzvf Python-3.5.3.tgz && cd /tmp/Python-3.5.3 && \
+    ./configure --prefix="/usr/local" --enable-shared LDFLAGS="-Wl,--rpath=/usr/local/lib" && \
+    make -j 6 && make install
+
+# 从源码安装 python 2.7.12
+#_bsddb             _curses            _curses_panel
+#_sqlite3           _tkinter           readline
+#bz2                dbm                gdbm
+# sunaudiodev and bsddb185 and dl and imageop are ignored
+RUN apt-get install -y libbz2-dev libncursesw5-dev libgdbm-dev liblzma-dev libsqlite3-dev tk-dev libreadline-dev libdb-dev
+RUN cd /tmp && wget http://mirrors.sohu.com/python/2.7.12/Python-2.7.12.tgz && \
+    tar -xzvf Python-2.7.12.tgz && cd /tmp/Python-2.7.12 && \
+    ./configure --prefix="/usr/local" --with-ensurepip=install --enable-unicode=ucs4 && \
+    make -j 6 && make install
+
+# 清理工作
+RUN apt-get autoremove
