--- a/ubuntu/pip.conf
+++ b/ubuntu/pip.conf
@@ -1,2 +1,5 @@
 [global]
-index-url = https://pypi.doubanio.com/simple
+index-url = http://mirrors.aliyun.com/pypi/simple/
+
+[install]
+trusted-host=mirrors.aliyun.com
